# tauri-example

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
settings/: globalSettings.json  userSettings.json
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cpp/: math.cpp  math.h
src-tauri/src/: command_handler.rs  global.rs  lib.rs  utils.rs
src-tauri/src/cpp/: calculator.rs  mod.rs
src-tauri/src/image/: lowres_rs.old.rs  lowres_rs.rs  mod.rs
src-tauri/src/rs/: cms.rs  mod.rs
src-tauri/src/rs/image/: lowres.old.rs  lowres.old2.rs  lowres.rs  mod.rs  utils.rs
src-tauri/src/rs/utils/: file_utils.rs
src-tauri/src/utilities/: file_utils.rs
src/composables/: useInvoke.ts
src/layouts/: Default.vue
src/pages/: Cms.vue  Comparer.vue  Home.vue  Settings.vue
src/store/: AppSettings.ts
