[package]
name = "tauri-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
image = "0.25.5"
tauri-plugin-dialog = "2"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
fast_image_resize = { version = "5.1.1", features = ["image"] }
once_cell = "1.20.2"
futures = "0.3"
fimg = "0.4.43"
hex = "0.4.3"
rexiv2 = "0.5"
exif = "0.0.1"

[profile.release.package.wry]
debug = true
debug-assertions = true
